parser.out
Grammar:

Rule 0     S' -> statement
Rule 1     statement -> select_data
Rule 2     statement -> delete_data
Rule 3     statement -> update_data
Rule 4     statement -> insert_data
Rule 5     statement -> drop_table
Rule 6     statement -> create_table
Rule 7     statement -> use_database
Rule 8     statement -> show_databases
Rule 9     statement -> drop_database
Rule 10    statement -> create_database
Rule 11    create_database -> CREATE DATABASE IDENTIFIER
Rule 12    drop_database -> DROP DATABASE IDENTIFIER
Rule 13    show_databases -> SHOW DATABASES
Rule 14    use_database -> USE IDENTIFIER
Rule 15    create_table -> CREATE TABLE IDENTIFIER ( column_defs )
Rule 16    drop_table -> DROP TABLE IDENTIFIER
Rule 17    column_defs -> column_def
Rule 18    column_defs -> column_defs , column_def
Rule 19    column_def -> IDENTIFIER data_type opt_constraints
Rule 20    data_type -> DECIMAL ( NUMBER , NUMBER )
Rule 21    data_type -> VARCHAR ( NUMBER )
Rule 22    data_type -> TIMESTAMP
Rule 23    data_type -> DOUBLE
Rule 24    data_type -> FLOAT
Rule 25    data_type -> INT
Rule 26    opt_constraints -> <empty>
Rule 27    opt_constraints -> constraint
Rule 28    opt_constraints -> constraint opt_constraints
Rule 29    constraint -> NOT NULL
Rule 30    constraint -> PRIMARY KEY
Rule 31    insert_data -> INSERT INTO IDENTIFIER ( ident_list ) VALUES values_list
Rule 32    update_data -> UPDATE IDENTIFIER SET assignment_list opt_where
Rule 33    delete_data -> DELETE FROM IDENTIFIER opt_where
Rule 34    ident_list -> IDENTIFIER
Rule 35    ident_list -> ident_list , IDENTIFIER
Rule 36    ref_list -> identifier_ref
Rule 37    ref_list -> ref_list , identifier_ref
Rule 38    values_list -> ( expr_list )
Rule 39    values_list -> values_list , ( expr_list )
Rule 40    assignment_list -> IDENTIFIER = expr  [precedence=left, level=3]
Rule 41    assignment_list -> assignment_list , IDENTIFIER = expr  [precedence=left, level=3]
Rule 42    select_data -> SELECT select_list FROM table_source opt_join opt_where opt_group_by opt_order_by opt_limit
Rule 43    select_list -> expr_list
Rule 44    select_list -> *  [precedence=left, level=5]
Rule 45    table_ref -> IDENTIFIER
Rule 46    table_ref -> IDENTIFIER AS IDENTIFIER
Rule 47    table_ref -> IDENTIFIER IDENTIFIER
Rule 48    table_source -> table_ref
Rule 49    opt_join -> <empty>
Rule 50    opt_join -> opt_join LEFT JOIN table_ref ON expr
Rule 51    opt_join -> opt_join JOIN table_ref ON expr
Rule 52    opt_where -> <empty>
Rule 53    opt_where -> WHERE expr
Rule 54    opt_group_by -> <empty>
Rule 55    opt_group_by -> GROUP BY ref_list
Rule 56    opt_order_by -> <empty>
Rule 57    opt_order_by -> ORDER BY order_list
Rule 58    opt_limit -> <empty>
Rule 59    opt_limit -> LIMIT NUMBER
Rule 60    order_list -> identifier_ref
Rule 61    order_list -> identifier_ref DESC
Rule 62    order_list -> identifier_ref ASC
Rule 63    order_list -> order_list , identifier_ref
Rule 64    order_list -> order_list , identifier_ref DESC
Rule 65    order_list -> order_list , identifier_ref ASC
Rule 66    expr_list -> expr
Rule 67    expr_list -> expr_list , expr
Rule 68    expr -> STRING
Rule 69    expr -> NUMBER
Rule 70    expr -> identifier_ref
Rule 71    expr -> MIN ( expr )
Rule 72    expr -> MAX ( expr )
Rule 73    expr -> SUM ( expr )
Rule 74    expr -> COUNT ( expr )
Rule 75    expr -> AVG ( expr )
Rule 76    expr -> COUNT ( * )
Rule 77    expr -> ( expr )
Rule 78    expr -> expr / expr  [precedence=left, level=5]
Rule 79    expr -> expr * expr  [precedence=left, level=5]
Rule 80    expr -> expr - expr  [precedence=left, level=4]
Rule 81    expr -> expr + expr  [precedence=left, level=4]
Rule 82    expr -> expr LIKE expr  [precedence=left, level=3]
Rule 83    expr -> expr NEQ expr  [precedence=left, level=3]
Rule 84    expr -> expr GTE expr  [precedence=left, level=3]
Rule 85    expr -> expr LTE expr  [precedence=left, level=3]
Rule 86    expr -> expr < expr  [precedence=left, level=3]
Rule 87    expr -> expr > expr  [precedence=left, level=3]
Rule 88    expr -> expr = expr  [precedence=left, level=3]
Rule 89    expr -> expr OR expr  [precedence=left, level=1]
Rule 90    expr -> expr AND expr  [precedence=left, level=2]
Rule 91    identifier_ref -> IDENTIFIER
Rule 92    identifier_ref -> IDENTIFIER . IDENTIFIER

Unused terminals:

    IN

Terminals, with rules where they appear:

(                    : 15 20 21 31 38 39 71 72 73 74 75 76 77
)                    : 15 20 21 31 38 39 71 72 73 74 75 76 77
*                    : 44 76 79
+                    : 81
,                    : 18 20 35 37 39 41 63 64 65 67
-                    : 80
.                    : 92
/                    : 78
<                    : 86
=                    : 40 41 88
>                    : 87
AND                  : 90
AS                   : 46
ASC                  : 62 65
AVG                  : 75
BY                   : 55 57
COUNT                : 74 76
CREATE               : 11 15
DATABASE             : 11 12
DATABASES            : 13
DECIMAL              : 20
DELETE               : 33
DESC                 : 61 64
DOUBLE               : 23
DROP                 : 12 16
FLOAT                : 24
FROM                 : 33 42
GROUP                : 55
GTE                  : 84
IDENTIFIER           : 11 12 14 15 16 19 31 32 33 34 35 40 41 45 46 46 47 47 91 92 92
IN                   : 
INSERT               : 31
INT                  : 25
INTO                 : 31
JOIN                 : 50 51
KEY                  : 30
LEFT                 : 50
LIKE                 : 82
LIMIT                : 59
LTE                  : 85
MAX                  : 72
MIN                  : 71
NEQ                  : 83
NOT                  : 29
NULL                 : 29
NUMBER               : 20 20 21 59 69
ON                   : 50 51
OR                   : 89
ORDER                : 57
PRIMARY              : 30
SELECT               : 42
SET                  : 32
SHOW                 : 13
STRING               : 68
SUM                  : 73
TABLE                : 15 16
TIMESTAMP            : 22
UPDATE               : 32
USE                  : 14
VALUES               : 31
VARCHAR              : 21
WHERE                : 53
error                : 

Nonterminals, with rules where they appear:

assignment_list      : 32 41
column_def           : 17 18
column_defs          : 15 18
constraint           : 27 28
create_database      : 10
create_table         : 6
data_type            : 19
delete_data          : 2
drop_database        : 9
drop_table           : 5
expr                 : 40 41 50 51 53 66 67 71 72 73 74 75 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90
expr_list            : 38 39 43 67
ident_list           : 31 35
identifier_ref       : 36 37 60 61 62 63 64 65 70
insert_data          : 4
opt_constraints      : 19 28
opt_group_by         : 42
opt_join             : 42 50 51
opt_limit            : 42
opt_order_by         : 42
opt_where            : 32 33 42
order_list           : 57 63 64 65
ref_list             : 37 55
select_data          : 1
select_list          : 42
show_databases       : 8
statement            : 0
table_ref            : 48 50 51
table_source         : 42
update_data          : 3
use_database         : 7
values_list          : 31 39


state 0

    (0) S' -> . statement
    (1) statement -> . select_data
    (2) statement -> . delete_data
    (3) statement -> . update_data
    (4) statement -> . insert_data
    (5) statement -> . drop_table
    (6) statement -> . create_table
    (7) statement -> . use_database
    (8) statement -> . show_databases
    (9) statement -> . drop_database
    (10) statement -> . create_database
    (42) select_data -> . SELECT select_list FROM table_source opt_join opt_where opt_group_by opt_order_by opt_limit
    (33) delete_data -> . DELETE FROM IDENTIFIER opt_where
    (32) update_data -> . UPDATE IDENTIFIER SET assignment_list opt_where
    (31) insert_data -> . INSERT INTO IDENTIFIER ( ident_list ) VALUES values_list
    (16) drop_table -> . DROP TABLE IDENTIFIER
    (15) create_table -> . CREATE TABLE IDENTIFIER ( column_defs )
    (14) use_database -> . USE IDENTIFIER
    (13) show_databases -> . SHOW DATABASES
    (12) drop_database -> . DROP DATABASE IDENTIFIER
    (11) create_database -> . CREATE DATABASE IDENTIFIER
    SELECT          shift and go to state 12
    DELETE          shift and go to state 13
    UPDATE          shift and go to state 14
    INSERT          shift and go to state 15
    DROP            shift and go to state 16
    CREATE          shift and go to state 17
    USE             shift and go to state 18
    SHOW            shift and go to state 19

    statement                      shift and go to state 1
    select_data                    shift and go to state 2
    delete_data                    shift and go to state 3
    update_data                    shift and go to state 4
    insert_data                    shift and go to state 5
    drop_table                     shift and go to state 6
    create_table                   shift and go to state 7
    use_database                   shift and go to state 8
    show_databases                 shift and go to state 9
    drop_database                  shift and go to state 10
    create_database                shift and go to state 11

state 1

    (0) S' -> statement .


state 2

    (1) statement -> select_data .
    $end            reduce using rule 1 (statement -> select_data .)


state 3

    (2) statement -> delete_data .
    $end            reduce using rule 2 (statement -> delete_data .)


state 4

    (3) statement -> update_data .
    $end            reduce using rule 3 (statement -> update_data .)


state 5

    (4) statement -> insert_data .
    $end            reduce using rule 4 (statement -> insert_data .)


state 6

    (5) statement -> drop_table .
    $end            reduce using rule 5 (statement -> drop_table .)


state 7

    (6) statement -> create_table .
    $end            reduce using rule 6 (statement -> create_table .)


state 8

    (7) statement -> use_database .
    $end            reduce using rule 7 (statement -> use_database .)


state 9

    (8) statement -> show_databases .
    $end            reduce using rule 8 (statement -> show_databases .)


state 10

    (9) statement -> drop_database .
    $end            reduce using rule 9 (statement -> drop_database .)


state 11

    (10) statement -> create_database .
    $end            reduce using rule 10 (statement -> create_database .)


state 12

    (42) select_data -> SELECT . select_list FROM table_source opt_join opt_where opt_group_by opt_order_by opt_limit
    (43) select_list -> . expr_list
    (44) select_list -> . *
    (66) expr_list -> . expr
    (67) expr_list -> . expr_list , expr
    (68) expr -> . STRING
    (69) expr -> . NUMBER
    (70) expr -> . identifier_ref
    (71) expr -> . MIN ( expr )
    (72) expr -> . MAX ( expr )
    (73) expr -> . SUM ( expr )
    (74) expr -> . COUNT ( expr )
    (75) expr -> . AVG ( expr )
    (76) expr -> . COUNT ( * )
    (77) expr -> . ( expr )
    (78) expr -> . expr / expr
    (79) expr -> . expr * expr
    (80) expr -> . expr - expr
    (81) expr -> . expr + expr
    (82) expr -> . expr LIKE expr
    (83) expr -> . expr NEQ expr
    (84) expr -> . expr GTE expr
    (85) expr -> . expr LTE expr
    (86) expr -> . expr < expr
    (87) expr -> . expr > expr
    (88) expr -> . expr = expr
    (89) expr -> . expr OR expr
    (90) expr -> . expr AND expr
    (91) identifier_ref -> . IDENTIFIER
    (92) identifier_ref -> . IDENTIFIER . IDENTIFIER
    *               shift and go to state 22
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    MIN             shift and go to state 27
    MAX             shift and go to state 29
    SUM             shift and go to state 30
    COUNT           shift and go to state 31
    AVG             shift and go to state 32
    (               shift and go to state 28
    IDENTIFIER      shift and go to state 33

    select_list                    shift and go to state 20
    expr_list                      shift and go to state 21
    expr                           shift and go to state 23
    identifier_ref                 shift and go to state 26

state 13

    (33) delete_data -> DELETE . FROM IDENTIFIER opt_where
    FROM            shift and go to state 34


state 14

    (32) update_data -> UPDATE . IDENTIFIER SET assignment_list opt_where
    IDENTIFIER      shift and go to state 35


state 15

    (31) insert_data -> INSERT . INTO IDENTIFIER ( ident_list ) VALUES values_list
    INTO            shift and go to state 36


state 16

    (16) drop_table -> DROP . TABLE IDENTIFIER
    (12) drop_database -> DROP . DATABASE IDENTIFIER
    TABLE           shift and go to state 37
    DATABASE        shift and go to state 38


state 17

    (15) create_table -> CREATE . TABLE IDENTIFIER ( column_defs )
    (11) create_database -> CREATE . DATABASE IDENTIFIER
    TABLE           shift and go to state 39
    DATABASE        shift and go to state 40


state 18

    (14) use_database -> USE . IDENTIFIER
    IDENTIFIER      shift and go to state 41


state 19

    (13) show_databases -> SHOW . DATABASES
    DATABASES       shift and go to state 42


state 20

    (42) select_data -> SELECT select_list . FROM table_source opt_join opt_where opt_group_by opt_order_by opt_limit
    FROM            shift and go to state 43


state 21

    (43) select_list -> expr_list .
    (67) expr_list -> expr_list . , expr
    FROM            reduce using rule 43 (select_list -> expr_list .)
    ,               shift and go to state 44


state 22

    (44) select_list -> * .
    FROM            reduce using rule 44 (select_list -> * .)


state 23

    (66) expr_list -> expr .
    (78) expr -> expr . / expr
    (79) expr -> expr . * expr
    (80) expr -> expr . - expr
    (81) expr -> expr . + expr
    (82) expr -> expr . LIKE expr
    (83) expr -> expr . NEQ expr
    (84) expr -> expr . GTE expr
    (85) expr -> expr . LTE expr
    (86) expr -> expr . < expr
    (87) expr -> expr . > expr
    (88) expr -> expr . = expr
    (89) expr -> expr . OR expr
    (90) expr -> expr . AND expr
    ,               reduce using rule 66 (expr_list -> expr .)
    FROM            reduce using rule 66 (expr_list -> expr .)
    )               reduce using rule 66 (expr_list -> expr .)
    /               shift and go to state 45
    *               shift and go to state 46
    -               shift and go to state 47
    +               shift and go to state 48
    LIKE            shift and go to state 49
    NEQ             shift and go to state 50
    GTE             shift and go to state 51
    LTE             shift and go to state 52
    <               shift and go to state 53
    >               shift and go to state 54
    =               shift and go to state 55
    OR              shift and go to state 56
    AND             shift and go to state 57


state 24

    (68) expr -> STRING .
    /               reduce using rule 68 (expr -> STRING .)
    *               reduce using rule 68 (expr -> STRING .)
    -               reduce using rule 68 (expr -> STRING .)
    +               reduce using rule 68 (expr -> STRING .)
    LIKE            reduce using rule 68 (expr -> STRING .)
    NEQ             reduce using rule 68 (expr -> STRING .)
    GTE             reduce using rule 68 (expr -> STRING .)
    LTE             reduce using rule 68 (expr -> STRING .)
    <               reduce using rule 68 (expr -> STRING .)
    >               reduce using rule 68 (expr -> STRING .)
    =               reduce using rule 68 (expr -> STRING .)
    OR              reduce using rule 68 (expr -> STRING .)
    AND             reduce using rule 68 (expr -> STRING .)
    ,               reduce using rule 68 (expr -> STRING .)
    FROM            reduce using rule 68 (expr -> STRING .)
    )               reduce using rule 68 (expr -> STRING .)
    $end            reduce using rule 68 (expr -> STRING .)
    GROUP           reduce using rule 68 (expr -> STRING .)
    ORDER           reduce using rule 68 (expr -> STRING .)
    LIMIT           reduce using rule 68 (expr -> STRING .)
    WHERE           reduce using rule 68 (expr -> STRING .)
    LEFT            reduce using rule 68 (expr -> STRING .)
    JOIN            reduce using rule 68 (expr -> STRING .)


state 25

    (69) expr -> NUMBER .
    /               reduce using rule 69 (expr -> NUMBER .)
    *               reduce using rule 69 (expr -> NUMBER .)
    -               reduce using rule 69 (expr -> NUMBER .)
    +               reduce using rule 69 (expr -> NUMBER .)
    LIKE            reduce using rule 69 (expr -> NUMBER .)
    NEQ             reduce using rule 69 (expr -> NUMBER .)
    GTE             reduce using rule 69 (expr -> NUMBER .)
    LTE             reduce using rule 69 (expr -> NUMBER .)
    <               reduce using rule 69 (expr -> NUMBER .)
    >               reduce using rule 69 (expr -> NUMBER .)
    =               reduce using rule 69 (expr -> NUMBER .)
    OR              reduce using rule 69 (expr -> NUMBER .)
    AND             reduce using rule 69 (expr -> NUMBER .)
    ,               reduce using rule 69 (expr -> NUMBER .)
    FROM            reduce using rule 69 (expr -> NUMBER .)
    )               reduce using rule 69 (expr -> NUMBER .)
    $end            reduce using rule 69 (expr -> NUMBER .)
    GROUP           reduce using rule 69 (expr -> NUMBER .)
    ORDER           reduce using rule 69 (expr -> NUMBER .)
    LIMIT           reduce using rule 69 (expr -> NUMBER .)
    WHERE           reduce using rule 69 (expr -> NUMBER .)
    LEFT            reduce using rule 69 (expr -> NUMBER .)
    JOIN            reduce using rule 69 (expr -> NUMBER .)


state 26

    (70) expr -> identifier_ref .
    /               reduce using rule 70 (expr -> identifier_ref .)
    *               reduce using rule 70 (expr -> identifier_ref .)
    -               reduce using rule 70 (expr -> identifier_ref .)
    +               reduce using rule 70 (expr -> identifier_ref .)
    LIKE            reduce using rule 70 (expr -> identifier_ref .)
    NEQ             reduce using rule 70 (expr -> identifier_ref .)
    GTE             reduce using rule 70 (expr -> identifier_ref .)
    LTE             reduce using rule 70 (expr -> identifier_ref .)
    <               reduce using rule 70 (expr -> identifier_ref .)
    >               reduce using rule 70 (expr -> identifier_ref .)
    =               reduce using rule 70 (expr -> identifier_ref .)
    OR              reduce using rule 70 (expr -> identifier_ref .)
    AND             reduce using rule 70 (expr -> identifier_ref .)
    ,               reduce using rule 70 (expr -> identifier_ref .)
    FROM            reduce using rule 70 (expr -> identifier_ref .)
    )               reduce using rule 70 (expr -> identifier_ref .)
    $end            reduce using rule 70 (expr -> identifier_ref .)
    GROUP           reduce using rule 70 (expr -> identifier_ref .)
    ORDER           reduce using rule 70 (expr -> identifier_ref .)
    LIMIT           reduce using rule 70 (expr -> identifier_ref .)
    WHERE           reduce using rule 70 (expr -> identifier_ref .)
    LEFT            reduce using rule 70 (expr -> identifier_ref .)
    JOIN            reduce using rule 70 (expr -> identifier_ref .)


state 27

    (71) expr -> MIN . ( expr )
    (               shift and go to state 58


state 28

    (77) expr -> ( . expr )
    (68) expr -> . STRING
    (69) expr -> . NUMBER
    (70) expr -> . identifier_ref
    (71) expr -> . MIN ( expr )
    (72) expr -> . MAX ( expr )
    (73) expr -> . SUM ( expr )
    (74) expr -> . COUNT ( expr )
    (75) expr -> . AVG ( expr )
    (76) expr -> . COUNT ( * )
    (77) expr -> . ( expr )
    (78) expr -> . expr / expr
    (79) expr -> . expr * expr
    (80) expr -> . expr - expr
    (81) expr -> . expr + expr
    (82) expr -> . expr LIKE expr
    (83) expr -> . expr NEQ expr
    (84) expr -> . expr GTE expr
    (85) expr -> . expr LTE expr
    (86) expr -> . expr < expr
    (87) expr -> . expr > expr
    (88) expr -> . expr = expr
    (89) expr -> . expr OR expr
    (90) expr -> . expr AND expr
    (91) identifier_ref -> . IDENTIFIER
    (92) identifier_ref -> . IDENTIFIER . IDENTIFIER
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    MIN             shift and go to state 27
    MAX             shift and go to state 29
    SUM             shift and go to state 30
    COUNT           shift and go to state 31
    AVG             shift and go to state 32
    (               shift and go to state 28
    IDENTIFIER      shift and go to state 33

    expr                           shift and go to state 59
    identifier_ref                 shift and go to state 26

state 29

    (72) expr -> MAX . ( expr )
    (               shift and go to state 60


state 30

    (73) expr -> SUM . ( expr )
    (               shift and go to state 61


state 31

    (74) expr -> COUNT . ( expr )
    (76) expr -> COUNT . ( * )
    (               shift and go to state 62


state 32

    (75) expr -> AVG . ( expr )
    (               shift and go to state 63


state 33

    (91) identifier_ref -> IDENTIFIER .
    (92) identifier_ref -> IDENTIFIER . . IDENTIFIER
    /               reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    *               reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    -               reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    +               reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    LIKE            reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    NEQ             reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    GTE             reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    LTE             reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    <               reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    >               reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    =               reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    OR              reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    AND             reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    ,               reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    FROM            reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    )               reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    $end            reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    GROUP           reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    ORDER           reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    LIMIT           reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    WHERE           reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    LEFT            reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    JOIN            reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    DESC            reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    ASC             reduce using rule 91 (identifier_ref -> IDENTIFIER .)
    .               shift and go to state 64


state 34

    (33) delete_data -> DELETE FROM . IDENTIFIER opt_where
    IDENTIFIER      shift and go to state 65


state 35

    (32) update_data -> UPDATE IDENTIFIER . SET assignment_list opt_where
    SET             shift and go to state 66


state 36

    (31) insert_data -> INSERT INTO . IDENTIFIER ( ident_list ) VALUES values_list
    IDENTIFIER      shift and go to state 67


state 37

    (16) drop_table -> DROP TABLE . IDENTIFIER
    IDENTIFIER      shift and go to state 68


state 38

    (12) drop_database -> DROP DATABASE . IDENTIFIER
    IDENTIFIER      shift and go to state 69


state 39

    (15) create_table -> CREATE TABLE . IDENTIFIER ( column_defs )
    IDENTIFIER      shift and go to state 70


state 40

    (11) create_database -> CREATE DATABASE . IDENTIFIER
    IDENTIFIER      shift and go to state 71


state 41

    (14) use_database -> USE IDENTIFIER .
    $end            reduce using rule 14 (use_database -> USE IDENTIFIER .)


state 42

    (13) show_databases -> SHOW DATABASES .
    $end            reduce using rule 13 (show_databases -> SHOW DATABASES .)


state 43

    (42) select_data -> SELECT select_list FROM . table_source opt_join opt_where opt_group_by opt_order_by opt_limit
    (48) table_source -> . table_ref
    (45) table_ref -> . IDENTIFIER
    (46) table_ref -> . IDENTIFIER AS IDENTIFIER
    (47) table_ref -> . IDENTIFIER IDENTIFIER
    IDENTIFIER      shift and go to state 74

    table_source                   shift and go to state 72
    table_ref                      shift and go to state 73

state 44

    (67) expr_list -> expr_list , . expr
    (68) expr -> . STRING
    (69) expr -> . NUMBER
    (70) expr -> . identifier_ref
    (71) expr -> . MIN ( expr )
    (72) expr -> . MAX ( expr )
    (73) expr -> . SUM ( expr )
    (74) expr -> . COUNT ( expr )
    (75) expr -> . AVG ( expr )
    (76) expr -> . COUNT ( * )
    (77) expr -> . ( expr )
    (78) expr -> . expr / expr
    (79) expr -> . expr * expr
    (80) expr -> . expr - expr
    (81) expr -> . expr + expr
    (82) expr -> . expr LIKE expr
    (83) expr -> . expr NEQ expr
    (84) expr -> . expr GTE expr
    (85) expr -> . expr LTE expr
    (86) expr -> . expr < expr
    (87) expr -> . expr > expr
    (88) expr -> . expr = expr
    (89) expr -> . expr OR expr
    (90) expr -> . expr AND expr
    (91) identifier_ref -> . IDENTIFIER
    (92) identifier_ref -> . IDENTIFIER . IDENTIFIER
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    MIN             shift and go to state 27
    MAX             shift and go to state 29
    SUM             shift and go to state 30
    COUNT           shift and go to state 31
    AVG             shift and go to state 32
    (               shift and go to state 28
    IDENTIFIER      shift and go to state 33

    expr                           shift and go to state 75
    identifier_ref                 shift and go to state 26

state 45

    (78) expr -> expr / . expr
    (68) expr -> . STRING
    (69) expr -> . NUMBER
    (70) expr -> . identifier_ref
    (71) expr -> . MIN ( expr )
    (72) expr -> . MAX ( expr )
    (73) expr -> . SUM ( expr )
    (74) expr -> . COUNT ( expr )
    (75) expr -> . AVG ( expr )
    (76) expr -> . COUNT ( * )
    (77) expr -> . ( expr )
    (78) expr -> . expr / expr
    (79) expr -> . expr * expr
    (80) expr -> . expr - expr
    (81) expr -> . expr + expr
    (82) expr -> . expr LIKE expr
    (83) expr -> . expr NEQ expr
    (84) expr -> . expr GTE expr
    (85) expr -> . expr LTE expr
    (86) expr -> . expr < expr
    (87) expr -> . expr > expr
    (88) expr -> . expr = expr
    (89) expr -> . expr OR expr
    (90) expr -> . expr AND expr
    (91) identifier_ref -> . IDENTIFIER
    (92) identifier_ref -> . IDENTIFIER . IDENTIFIER
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    MIN             shift and go to state 27
    MAX             shift and go to state 29
    SUM             shift and go to state 30
    COUNT           shift and go to state 31
    AVG             shift and go to state 32
    (               shift and go to state 28
    IDENTIFIER      shift and go to state 33

    expr                           shift and go to state 76
    identifier_ref                 shift and go to state 26

state 46

    (79) expr -> expr * . expr
    (68) expr -> . STRING
    (69) expr -> . NUMBER
    (70) expr -> . identifier_ref
    (71) expr -> . MIN ( expr )
    (72) expr -> . MAX ( expr )
    (73) expr -> . SUM ( expr )
    (74) expr -> . COUNT ( expr )
    (75) expr -> . AVG ( expr )
    (76) expr -> . COUNT ( * )
    (77) expr -> . ( expr )
    (78) expr -> . expr / expr
    (79) expr -> . expr * expr
    (80) expr -> . expr - expr
    (81) expr -> . expr + expr
    (82) expr -> . expr LIKE expr
    (83) expr -> . expr NEQ expr
    (84) expr -> . expr GTE expr
    (85) expr -> . expr LTE expr
    (86) expr -> . expr < expr
    (87) expr -> . expr > expr
    (88) expr -> . expr = expr
    (89) expr -> . expr OR expr
    (90) expr -> . expr AND expr
    (91) identifier_ref -> . IDENTIFIER
    (92) identifier_ref -> . IDENTIFIER . IDENTIFIER
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    MIN             shift and go to state 27
    MAX             shift and go to state 29
    SUM             shift and go to state 30
    COUNT           shift and go to state 31
    AVG             shift and go to state 32
    (               shift and go to state 28
    IDENTIFIER      shift and go to state 33

    expr                           shift and go to state 77
    identifier_ref                 shift and go to state 26

state 47

    (80) expr -> expr - . expr
    (68) expr -> . STRING
    (69) expr -> . NUMBER
    (70) expr -> . identifier_ref
    (71) expr -> . MIN ( expr )
    (72) expr -> . MAX ( expr )
    (73) expr -> . SUM ( expr )
    (74) expr -> . COUNT ( expr )
    (75) expr -> . AVG ( expr )
    (76) expr -> . COUNT ( * )
    (77) expr -> . ( expr )
    (78) expr -> . expr / expr
    (79) expr -> . expr * expr
    (80) expr -> . expr - expr
    (81) expr -> . expr + expr
    (82) expr -> . expr LIKE expr
    (83) expr -> . expr NEQ expr
    (84) expr -> . expr GTE expr
    (85) expr -> . expr LTE expr
    (86) expr -> . expr < expr
    (87) expr -> . expr > expr
    (88) expr -> . expr = expr
    (89) expr -> . expr OR expr
    (90) expr -> . expr AND expr
    (91) identifier_ref -> . IDENTIFIER
    (92) identifier_ref -> . IDENTIFIER . IDENTIFIER
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    MIN             shift and go to state 27
    MAX             shift and go to state 29
    SUM             shift and go to state 30
    COUNT           shift and go to state 31
    AVG             shift and go to state 32
    (               shift and go to state 28
    IDENTIFIER      shift and go to state 33

    expr                           shift and go to state 78
    identifier_ref                 shift and go to state 26

state 48

    (81) expr -> expr + . expr
    (68) expr -> . STRING
    (69) expr -> . NUMBER
    (70) expr -> . identifier_ref
    (71) expr -> . MIN ( expr )
    (72) expr -> . MAX ( expr )
    (73) expr -> . SUM ( expr )
    (74) expr -> . COUNT ( expr )
    (75) expr -> . AVG ( expr )
    (76) expr -> . COUNT ( * )
    (77) expr -> . ( expr )
    (78) expr -> . expr / expr
    (79) expr -> . expr * expr
    (80) expr -> . expr - expr
    (81) expr -> . expr + expr
    (82) expr -> . expr LIKE expr
    (83) expr -> . expr NEQ expr
    (84) expr -> . expr GTE expr
    (85) expr -> . expr LTE expr
    (86) expr -> . expr < expr
    (87) expr -> . expr > expr
    (88) expr -> . expr = expr
    (89) expr -> . expr OR expr
    (90) expr -> . expr AND expr
    (91) identifier_ref -> . IDENTIFIER
    (92) identifier_ref -> . IDENTIFIER . IDENTIFIER
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    MIN             shift and go to state 27
    MAX             shift and go to state 29
    SUM             shift and go to state 30
    COUNT           shift and go to state 31
    AVG             shift and go to state 32
    (               shift and go to state 28
    IDENTIFIER      shift and go to state 33

    expr                           shift and go to state 79
    identifier_ref                 shift and go to state 26

state 49

    (82) expr -> expr LIKE . expr
    (68) expr -> . STRING
    (69) expr -> . NUMBER
    (70) expr -> . identifier_ref
    (71) expr -> . MIN ( expr )
    (72) expr -> . MAX ( expr )
    (73) expr -> . SUM ( expr )
    (74) expr -> . COUNT ( expr )
    (75) expr -> . AVG ( expr )
    (76) expr -> . COUNT ( * )
    (77) expr -> . ( expr )
    (78) expr -> . expr / expr
    (79) expr -> . expr * expr
    (80) expr -> . expr - expr
    (81) expr -> . expr + expr
    (82) expr -> . expr LIKE expr
    (83) expr -> . expr NEQ expr
    (84) expr -> . expr GTE expr
    (85) expr -> . expr LTE expr
    (86) expr -> . expr < expr
    (87) expr -> . expr > expr
    (88) expr -> . expr = expr
    (89) expr -> . expr OR expr
    (90) expr -> . expr AND expr
    (91) identifier_ref -> . IDENTIFIER
    (92) identifier_ref -> . IDENTIFIER . IDENTIFIER
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    MIN             shift and go to state 27
    MAX             shift and go to state 29
    SUM             shift and go to state 30
    COUNT           shift and go to state 31
    AVG             shift and go to state 32
    (               shift and go to state 28
    IDENTIFIER      shift and go to state 33

    expr                           shift and go to state 80
    identifier_ref                 shift and go to state 26

state 50
